<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">聚光广播</string>
    <string name="join_title">加入广播</string>
    <string name="join_sub">一首歌，所有设备严格同步播放\n请保持 App 在前台运行</string>
    <string name="server_label">服务端地址</string>
    <string name="server_hint">如 192.168.90.55:3000 或 nas.local:3000</string>
    <string name="device_name_label">设备名</string>
    <string name="join_btn">加入广播</string>
    <string name="join_btn_loading">连接中…</string>
    <string name="player_waiting">等待广播…</string>
    <string name="player_empty">请管理员选择曲目</string>
    <string name="status_connecting">连接中</string>
    <string name="status_connected">已连接</string>
    <string name="status_disconnected">已断开，正在重连</string>
    <string name="label_device">设备</string>
    <string name="label_drift">偏差</string>
    <string name="label_rtt">RTT</string>
    <string name="label_offset">时钟偏</string>
    <string name="label_volume">音量</string>
    <string name="ota_title">发现新版本</string>
    <string name="ota_downloading">下载中…</string>
    <string name="ota_install">立即安装</string>
    <string name="ota_later">稍后</string>
    <string name="ota_unknown_source">允许安装未知来源应用</string>
</resources>